--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,15 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.10.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>4.3.0</version>
+            <scope>test</scope>
+<!--            test scope means that it is gonna be reachable in only test part of the  project*******************-->
+        </dependency>
+
 
 
     </dependencies>
